add missing config values, remove unused ones

--- a/resources/cleric.properties
+++ b/resources/cleric.properties
@@ -1,7 +1,6 @@
 nick = "cleric"
-name = "cleric"
+username = "cleric"
+realname = "cleric"
 host = "irc.freenode.net"
 port = 6667
 channels = ["#my-test-channel"]
-auto-reconnect = true
-verbose = true
